fixed error postions at item form and removed overlaping

--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -1945,6 +1945,11 @@
   .hint-list{
     max-width: calc(100% - 51px);
   }
+  .item_errors{
+    width: auto;
+    margin: 0 auto;
+    height: auto;
+  }
 }
 /* Small Devices, Tablets */
 @media only screen and (max-width : 640px) {}
